@@ -1,7 +1,5 @@
 # -*- coding: utf-8 -*-
 """
-
-TODOs: Generic Markdown conversions
 """
 import argparse
 import glob
@@ -9,6 +7,7 @@ import re
 import select
 import sys
 import tarfile
+import subprocess
 
 def convert_base(changelog, softwarename):
     changelog = changelog.replace('\r\n', '\n')
@@ -113,20 +112,29 @@ def convert_markdown(changelog):
     """
     Tested with spyder (-related) software only
     """
+
+    # Normalize headings
+    changelog = re.sub(r"(\n|^)(.+?)\n=+\n", r"# \2\n", changelog)
+    changelog = re.sub(r"(\n|^)(.+?)\n-+\n", r"## \2\n", changelog)
+
     # preface, everything until first header
     changelog = re.sub(r"^(.*?)#", "#", changelog, flags=re.DOTALL)
 
     # first heading
     changelog = re.sub(r"^# History of changes$", "", changelog, flags=re.MULTILINE | re.IGNORECASE)
 
-    changelog = re.sub(r"^## (?:v|version )?([0-9\.]+) (.*)$", r"- update to version \1:", changelog,
+    changelog = re.sub(r"^## (?:v|version )?([0-9\.]+)(.*)$", r"- update to version \1:", changelog,
                        flags=re.MULTILINE | re.IGNORECASE)
-    changelog = re.sub(r"^### (.*):?$", r" - \1:", changelog, flags=re.MULTILINE)
+    if "\n###" in changelog:
+        changelog = re.sub(r"^### (.*):?$", r" - \1:", changelog, flags=re.MULTILINE)
+        default_whitespace_prefix = "  "
+    else:
+        default_whitespace_prefix = " "
 
     # normal entries
-    changelog = re.sub(r"^  (.*)$", r"    \1", changelog, flags=re.MULTILINE)
-    changelog = re.sub(r"^\* (.*)$", r"  - \1", changelog, flags=re.MULTILINE)
-    changelog = re.sub(r"^(\w)(.*)$", r"  - \1\2", changelog, flags=re.MULTILINE)
+    changelog = re.sub(r"^  (.*)$", r"%s  \1" % default_whitespace_prefix, changelog, flags=re.MULTILINE)
+    changelog = re.sub(r"^\* (.*)$", r"%s- \1" % default_whitespace_prefix, changelog, flags=re.MULTILINE)
+    changelog = re.sub(r"^(\w)(.*)$", r"%s- \1\2" % default_whitespace_prefix, changelog, flags=re.MULTILINE)
     return changelog
 
 
